<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/artImageView"
        android:layout_width="355dp"
        android:layout_height="246dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/fragment_art_detail_image_view"
        app:layout_constraintBottom_toTopOf="@+id/edtNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/edtNameText"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginBottom="19dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/edtArtistText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artImageView" />

    <EditText
        android:id="@+id/edtArtistText"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="17dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/enter_artist"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/edtYearText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNameText" />

    <EditText
        android:id="@+id/edtYearText"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="36dp"
        android:autofillHints="year"
        android:ems="10"
        android:hint="@string/enter_year"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtArtistText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtYearText" />

</androidx.constraintlayout.widget.ConstraintLayout>